Remove db link from footer cause reason & fix footer on mobile.

--- a/cmgm/database/styles/Map/main.css
+++ b/cmgm/database/styles/Map/main.css
@@ -24,3 +24,5 @@
 .leaflet-control-attribution {
   display: none;
 }
+#map { float: right; width: 100%; height: 100%;}
+#mapid { width: 100%; height: 100%; z-index: 0;}
